--- a/build.gradle
+++ b/build.gradle
@@ -106,8 +106,15 @@ jacocoTestReport {
 =========================================================
 */
 
+configurations {
+    all*.exclude group: 'org.bytedeco', module: 'javacpp-presets'
+}
+
 repositories {
     mavenCentral()
+    maven {
+        url 'http://maven2.javacv.googlecode.com/git/'
+    }
 }
 
 dependencies {
@@ -115,6 +122,9 @@ dependencies {
         exclude(module: "spring-boot-starter-tomcat")
         exclude(group: "org.hibernate")
     }
+    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '3.1.0-1.2'
+    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '3.1.0-1.2', classifier:'macosx-x86_64'
+    compile (group: 'org.bytedeco', name: 'javacv', version: '1.2')
     compile(group: 'net.sf.jopt-simple', name: 'jopt-simple', version: '5.0.1')
     compile(group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3')
     compile(group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3')
