--- a/build.gradle
+++ b/build.gradle
@@ -123,7 +123,7 @@ dependencies {
         exclude(group: "org.hibernate")
     }
     compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '3.1.0-1.2'
-    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '3.1.0-1.2', classifier:'macosx-x86_64'
+    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '3.1.0-1.2', classifier:'linux-x86_64'
     compile (group: 'org.bytedeco', name: 'javacv', version: '1.2')
     compile(group: 'net.sf.jopt-simple', name: 'jopt-simple', version: '5.0.1')
     compile(group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3')
