--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     repositories {
         mavenCentral()
     }
+
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
     }
@@ -111,6 +112,7 @@ repositories {
 }
 
 dependencies {
+    compile project(':jrpicam')
     compile(group: "org.springframework.boot", name: "spring-boot-starter-web") {
         exclude(module: "spring-boot-starter-tomcat")
         exclude(group: "org.hibernate")
@@ -121,4 +123,3 @@ dependencies {
     testCompile(group: 'junit', name: 'junit', version: '4.12')
     testCompile(group: 'org.mockito', name: 'mockito-core', version: '1.8.5')
 }
-
