--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ jdk:
   - oraclejdk8
 
 after_success:
-  - if [ -e ./gradlew ]; then ./gradlew jacocoTestReport;else gradle jacocoTestReport;fi
+  - if [ -e ./gradlew ]; then ./gradlew docBundle jacocoTestReport;else gradle docBundle jacocoTestReport;fi
   - bash <(curl -s https://codecov.io/bash)
